--- a/docvitta/templates/header.html
+++ b/docvitta/templates/header.html
@@ -26,23 +26,12 @@
                                 <ul class="list-unstyled mb-0">
                                     <li><a class="dropdown-item" href="{% url 'homepage:vacancy' %}">Вакансии</a></li>
                                     <li><a class="dropdown-item" href="https://www.mofoms.ru/fond/subekty-i-uchastniki.php">Сведения о ТФОМС</a></li>
-                                    <li><a class="dropdown-item" href="one-column.html">Результаты НОК</a></li>
                                     <li><a class="dropdown-item" href="https://yandex.ru/maps/org/doktor_vitta/86760931983/reviews/?add-review=true">Отзывы</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle p-0" href="{% url 'homepage:about' %}" id="navbarDropdown33" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Отделения
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown33">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a class="dropdown-item" href="{% url 'homepage:vacancy' %}">Вакансии</a></li>
-                                    <li><a class="dropdown-item" href="single-blog.html">Сведения о ТФОМС</a></li>
-                                    <li><a class="dropdown-item" href="one-column.html">Результаты НОК</a></li>
-                                </ul>
-                            </div>
+                            <a class="nav-link p-0" href="{% url 'homepage:about' %}">Отделения</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link p-0" href="{% url 'homepage:doctors' %}">Врачи</a>
@@ -55,17 +44,14 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
                                 <ul class="list-unstyled mb-0">
-                                    <li><a class="dropdown-item" href="load-more.html">Платные услуги</a></li>
+                                    <li><a class="dropdown-item" href="https://docvitta.infoclinica.ru/pricelist">Платные услуги</a></li>
                                     <li><a class="dropdown-item" href="/page/4/">Способы оплаты</a></li>
-                                    <li><a class="dropdown-item" href="load-more.html">График приема граждан</a></li>
                                     <li><a class="dropdown-item" href="/page/2/">Правила записи на первичный прием</a></li>
-                                    <li><a class="dropdown-item" href="one-column.html">Лекарственное обеспечение</a></li>
+                                    <li><a class="dropdown-item" href="/page/6/">Лекарственное обеспечение</a></li>
                                     <li><a class="dropdown-item" href="/page/1/">Политика обработки перс. данных</a></li>
-                                    <li><a class="dropdown-item" href="three-column.html">Территориальная программа госгарантий</a></li>
-                                    <li><a class="dropdown-item" href="three-column-sidbar.html">Диспансеризация</a></li>
-                                    <li><a class="dropdown-item" href="four-column.html">Сведения о профосмотрах</a></li>
-                                    <li><a class="dropdown-item" href="six-column.html">Календарь прививок</a></li>
+                                    <li><a class="dropdown-item" href="/page/5/">Территориальная программа госгарантий</a></li>
                                     <li><a class="dropdown-item" href="/page/3/">Порядок оказания платных медицинских услуг</a></li>
+                                    <li><a class="dropdown-item" href="/article/">Статьи</a></li>
                                 </ul>
                             </div>
                         </li>
