--- a/docvitta/templates/homepage/contact.html
+++ b/docvitta/templates/homepage/contact.html
@@ -79,51 +79,11 @@
         </div>
     </section>
     <!-- PRICING SECTION -->
-    <!-- CONTACT SECTION -->
-    <section class="w-100 float-left contact-page-form-section contact-con position-relative">
-        <div class="dots-img position-relative">
-            <div class="padding-top padding-bottom contact-inner-con position-relative">
-                <div class="container">
-                    <div class="contact-form">
-                        <span class="sub-txt d-block" data-aos="fade-up" data-aos-duration="700">Запишитесь на консультацию</span>
-                        <h2 data-aos="fade-up" data-aos-duration="700">Make an Appointent</h2>
-                        <form class="form-box" method="post" id="contactpage">
-                            <ul class="list-unstyled" data-aos="fade-up" data-aos-duration="700">
-                                <li>
-                                    <input type="text" name="fname" id="fname" placeholder="Ваше имя:">
-                                </li>
-                                <li>
-                                    <input type="tel" name="phone" id="phone" placeholder="Телефон:">
-                                </li>
-                                <li>
-                                    <input type="email" placeholder="Ваш Email:" name="email" id="email">
-                                </li>
-                                <li>
-                                    <input placeholder="Дата:" type="text" onfocus="(this.type = 'date')" id="date">
-                                </li>
-                                <li>
-                                    <textarea placeholder="Сообщение:" name="subject" id="subject"></textarea>
-                                </li>
-                            </ul>
-                            <div class="submit-btn" data-aos="fade-up" data-aos-duration="700">
-                                <button type="submit" id="submit">
-                                    Записаться
-                                    <figure class="mb-0">
-                                        <img src="{% static 'assets/images/top-arrow.png'%}" alt="top-arrow">
-                                    </figure>
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- CONTACT SECTION -->
+
     <!-- MAP SECTION -->
     <div class="responsive-map w-100 float-left padding-top padding-bottom">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8387096759334!2d144.9532000767644!3d-37.817246734238644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4dd5a05d97%3A0x3e64f855a564844d!2s121%20King%20St%2C%20Melbourne%20VIC%203000%2C%20Australia!5e0!3m2!1sen!2s!4v1692879195247!5m2!1sen!2s"
+            src="https://yandex.ru/map-widget/v1/?ll=37.933333%2C55.823487&mode=whatshere&whatshere%5Bpoint%5D=37.933217%2C55.823702&whatshere%5Bzoom%5D=17&z=17.08"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
