--- a/docvitta/templates/socnetworks.html
+++ b/docvitta/templates/socnetworks.html
@@ -1,22 +1,25 @@
+{% load static %}
 <div class="box1 box3">
     <h5 data-aos="fade-up" data-aos-duration="700">Подписывайтесь</h5>
-    <div class="social-icons">
-        <ul class="mb-0 list-unstyled">
-            <li data-aos="fade-up" data-aos-duration="700"><a href="https://vk.com/doctorvitta"
-                                                              class="text-decoration-none"><i
-                    class="fab fa-linkedin-in"></i></a></li>
-            <li data-aos="fade-up" data-aos-duration="700"><a
-                    href="https://instagram.com/doctorvitta" class="text-decoration-none"><i
-                    class="fab fa-instagram"></i></a></li>
-            <li data-aos="fade-up" data-aos-duration="700"><a href="https://ok.ru/group/70000004744559"
-                                                              class="text-decoration-none"><i
-                    class="fab fa-facebook-f"></i></a></li>
-            <li data-aos="fade-up" data-aos-duration="700"><a
+    <div class="">
+        <ul class="mb-0 list-unstyled " data-aos="fade-up" data-aos-duration="700">
+            <a href="https://vk.com/doctorvitta"
+               class=""><img
+                    class="fab fa-linkedin-in" src="{% static 'assets/images/vk.png'%}"></a>
+            <a
+                    href="https://instagram.com/doctorvitta" class="text-decoration-none"><img
+                    class="fab fa-instagram" src="{% static 'assets/images/instagram.png'%}"></a>
+            <a href="https://ok.ru/group/70000004744559"
+               class="text-decoration-none"><img
+                    class="fab fa-facebook-f" src="{% static 'assets/images/facebook.png'%}"></a>
+            <a
                     href="https://dzen.ru/doctorvitta"
-                    class="text-decoration-none"><i class="fab fa-twitter"></i></a></li>
-            <li data-aos="fade-up" data-aos-duration="700"><a
+                    class="text-decoration-none"><img class="fab fa-twitter"
+                                                      src="{% static 'assets/images/bookmark_1.png'%}"></a>
+            <a
                     href="https://t.me/docvitta"
-                    class="text-decoration-none"><i class="fab fa-twitter"></i></a></li>
+                    class="text-decoration-none"><img class="fab fa-twitter"
+                                                      src="{% static 'assets/images/telegram.png'%}"></a>
         </ul>
     </div>
 </div>
