--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -98,7 +98,7 @@
                     </figure>
                     <h4>{{dep.name}}</h4>
                     <p>{{dep.description}}</p>
-                    <a href="#">Подробнее<i class="fas fa-angle-right"></i></a>
+<!--                    <a href="#">Подробнее<i class="fas fa-angle-right"></i></a>-->
                 </div>
                 {% endfor %}
             </div>
