--- a/docvitta/templates/homepage/vacancy.html
+++ b/docvitta/templates/homepage/vacancy.html
@@ -52,20 +52,20 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 col-12 column">
-                    <div class="box1 box2">
-                        <h5 data-aos="fade-up" data-aos-duration="700">Другие</h5>
-                        <ul class="list-unstyled mb-0">
-                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a
-                                    href="six-column.html">Digital business</a></li>
-                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a
-                                    href="six-column.html">Business Consulting</a></li>
-                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a
-                                    href="six-column.html">Consulting</a></li>
-                            <li class="mb-0 text-size-16" data-aos="fade-up" data-aos-duration="700"><a
-                                    href="six-column.html">Business & Finance</a>
-                            </li>
-                        </ul>
-                    </div>
+<!--                    <div class="box1 box2">-->
+<!--                        <h5 data-aos="fade-up" data-aos-duration="700">Другие</h5>-->
+<!--                        <ul class="list-unstyled mb-0">-->
+<!--                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a-->
+<!--                                    href="six-column.html">Digital business</a></li>-->
+<!--                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a-->
+<!--                                    href="six-column.html">Business Consulting</a></li>-->
+<!--                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a-->
+<!--                                    href="six-column.html">Consulting</a></li>-->
+<!--                            <li class="mb-0 text-size-16" data-aos="fade-up" data-aos-duration="700"><a-->
+<!--                                    href="six-column.html">Business & Finance</a>-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
                     {% include 'socnetworks.html' %}
                 </div>
             </div>
