--- a/docvitta/templates/homepage/vacancy_info.html
+++ b/docvitta/templates/homepage/vacancy_info.html
@@ -52,23 +52,7 @@
                             {% endfor %}
                         </ul>
                     </div>
-                    <div class="box1 box3">
-                        <h5 data-aos="fade-up" data-aos-duration="700">Наши соц. сети</h5>
-                        <div class="social-icons">
-                            <ul class="mb-0 list-unstyled">
-                                <li data-aos="fade-up" data-aos-duration="700"><a href="https://www.linkedin.com/login"
-                                        class="text-decoration-none"><i class="fab fa-linkedin-in"></i></a></li>
-                                <li data-aos="fade-up" data-aos-duration="700"><a
-                                        href="https://www.instagram.com/accounts/login/" class="text-decoration-none"><i
-                                            class="fab fa-instagram"></i></a></li>
-                                <li data-aos="fade-up" data-aos-duration="700"><a href="https://www.facebook.com/login/"
-                                        class="text-decoration-none"><i class="fab fa-facebook-f"></i></a></li>
-                                <li data-aos="fade-up" data-aos-duration="700"><a
-                                        href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZW4ifQ%3D%3D%22%7D"
-                                        class="text-decoration-none"><i class="fab fa-twitter"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
+                {% include 'socnetworks.html' %}
                 </div>
             </div>
         </div>
