--- a/docvitta/templates/footer.html
+++ b/docvitta/templates/footer.html
@@ -11,7 +11,7 @@
                     <p>Общество с ограниченной ответственностью  «ВиттаМед»
                         ИНН: 5001154570<br>
                         ОГРН: 1235000103337<br>
-                        Юридический адрес: 143900, РОССИЯ, МОСКОВСКАЯ ОБЛ., БАЛАШИХА Г.О., БАЛАШИХА Г., ТЕР. ЗАПАДНАЯ КОММУНАЛЬНАЯ ЗОНА, ЭНТУЗИАСТОВ Ш., ВЛД. 1А, ПОМЕЩ. 1<br>
+                        Юридический адрес: 143900, Россия, Московская Обл., Балашиха, Тер. западная коммуная зона, Энтузиастов ш., влд. 1а, пом. 1<br>
                         Ежедневно с 06-30 до 19-30</p>
                     <p class="mb-0">Сведения о лицензии - Соискатель</p>
                 </div>
@@ -33,7 +33,7 @@
                         8-800-350-24-68
                     </p>
                     <p>
-                        ТЕРРИТОРИАЛЬНЫЙ ОРГАН РОСЗДРАВНАДЗОРА ПО Г. МОСКВЕ И МОСКОВСКОЙ ОБЛАСТИ<br>
+                        Территориальный орган Росздравнадзора по г. Москве и Московской области<br>
                         office@reg77.roszdravnadzor.gov.ru<br>
                         109316, г. Москва, Волгоградский проспект, дом 27<br>
                         8 (916) 256-76-76
