--- a/docvitta/templates/homepage/about-us.html
+++ b/docvitta/templates/homepage/about-us.html
@@ -28,30 +28,27 @@
                             alt="vedio-img">
                     </div>
                     <div class="experience-box text-center">
-                        <div class="position-relative years-con">32 <span>+</span></div>
-                        <p>Years of Experience</p>
+                        <div class="position-relative years-con">24 <span>+</span></div>
+                        <p>Лет стажа</p>
                     </div>
                 </div>
                 <div class="about-box-title">
-                    <span class="d-block sub-txt" data-aos="fade-up" data-aos-duration="700">About us</span>
-                    <h2 data-aos="fade-up" data-aos-duration="700">We Carefully Manage
-                        & Treat The Patients</h2>
-                    <p data-aos="fade-up" data-aos-duration="700">Donec pulvinar tellus egetmagna aliquet ultricies. nec
-                        eleifend
-                        sem convallis vitae soluta nobis est eligendi optio cumque nihio
-                        impedit ruo minus id quod maxime placeat facere.</p>
+                    <span class="d-block sub-txt" data-aos="fade-up" data-aos-duration="700">О нас</span>
+                    <h2 data-aos="fade-up" data-aos-duration="700">ВиттаМед</h2>
+                    <p data-aos="fade-up" data-aos-duration="700">Наша цель - помочь людям жить полноценной и здоровой жизнью. Мы верим, что каждый заслуживает доступной и эффективной медицинской помощи, поэтому мы стараемся сделать ее доступной для всех наших пациентов.
+Мы гордимся своей командой профессионалов, которые принимают во внимание индивидуальные потребности и желания каждого пациента. Мы ценим доверие, которое они нам оказывают, и стараемся оправдать его в каждом случае.
+Если вам требуется медицинская помощь, обратитесь к нам. Мы будем рады помочь вам и ваши близким в борьбе за здоровье и благополучие.</p>
                     <div class="generic-list">
                         <ul class="list-unstyled mb-0" data-aos="fade-up" data-aos-duration="700">
-                            <li>Donec pulvinar tellus egetmagna aliquet ultricies.</li>
-                            <li>Eligendi optio cumque nihil impedit auo minus ie auo.</li>
-                            <li>The officia deserunt mollit anim id est laborum.</li>
+                            <li>Внимательный подход к каждому пациенту.</li>
+                            <li>Полный комплекс диагностики и анализов.</li>
                         </ul>
                     </div>
                     <div class="generic-btn" data-aos="fade-up" data-aos-duration="700">
-                        <a href="contact.html">
-                            Book an Appointment
+                        <a href="https://docvitta.infoclinica.ru/login">
+                            Записаться на прием
                         </a>
-                        <a href="contact.html">
+                        <a href="https://docvitta.infoclinica.ru/login">
                             <figure class="mb-0">
                                 <img src="{% static 'assets/images/long-arrow.png'%}" alt="long-arrow">
                             </figure>
