--- a/docvitta/templates/homepage/article.html
+++ b/docvitta/templates/homepage/article.html
@@ -33,31 +33,24 @@
                         <figure class="image1" data-aos="fade-up" data-aos-duration="700">
                             {% if article.image.url is not null %}<img src="{{ article.image.url }}" alt="" class="img-fluid">{% endif %}
                         </figure>
-                        <div class="content1">
-                            <h4 data-aos="fade-up" data-aos-duration="700"></h4>
+                        <div class="container">
+                            <h4 data-aos="fade-up" data-aos-duration="700">{{ article.name }}</h4>
                             <i class="fas fa-user" data-aos="fade-up" data-aos-duration="700"></i>
 
-                            <p class="text-size-14" data-aos="fade-up" data-aos-duration="700">{{ article.text|safe }}
-                            </p>
-                            <div class="generic-list">
-                                <ul class="list-unstyled mb-0 aos-init aos-animate" data-aos="fade-up" data-aos-duration="700">
-                                    {% for vac in vacancies %}
-                                    <li><a href="{{vac.pk}}/">{{vac.name}}</a></li>
-                                    {% endfor %}
-                                </ul>
+                            <div class="text-size-13" data-aos="fade-up" data-aos-duration="700">
+                                {{ article.text|safe }}
                             </div>
-
-
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 col-12 column">
                     <div class="box1 box2">
                         <h5 data-aos="fade-up" data-aos-duration="700">Статьи</h5>
-                        <ul class="list-unstyled mb-0 float-left">
+                        <ul class="list-unstyled mb-0">
                             {% for art in articles %}
-                            <li class="text-size-14" data-aos="fade-up" data-aos-duration="700"><a
-                                    href="/article/{{ art.id }}/">{{ art.name }}</a></li>
+                            <li class="text-size-13" data-aos="fade-up" data-aos-duration="700">
+                                <a href="/article/{{ art.id }}/">{{ art.name }}</a>
+                            </li>
                             {% endfor %}
                         </ul>
                     </div>
