--- a/docvitta/templates/homepage/contact.html
+++ b/docvitta/templates/homepage/contact.html
@@ -25,8 +25,9 @@
     <section class="contact-details-section bg-design w-100 float-left padding-top padding-bottom position-relative">
         <div class="container">
             <div class="generic-title text-center">
-                <span class="d-block sub-txt" data-aos="fade-up" data-aos-duration="700">Приходите на приём</span>
+
                 <h2 data-aos="fade-up" data-aos-duration="700">Контакты для связи</h2>
+                <span class="d-block sub-txt pt-3" data-aos="fade-up" data-aos-duration="700">Мы работаем с 6:30 до 19:30</span>
             </div>
             <div class="contact-links-main-sec">
                 <div class="contact-links-box">
@@ -39,7 +40,7 @@
                         <h5 data-aos="fade-up" data-aos-duration="700">Адрес</h5>
                         <p data-aos="fade-up" data-aos-duration="700">Балашихинское шоссе, дом 12,
                             Балашиха, МО.</p>
-                        <a class="contact-btn" href="https://yandex.ru/maps/-/CDugiK7I" data-aos="fade-up" data-aos-duration="700">Приехать<i
+                        <a class="contact-btn" href="https://yandex.ru/maps/-/CDugiK7I" data-aos="fade-up" data-aos-duration="700" target="_blank">Приехать<i
                                 class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
@@ -55,7 +56,7 @@
                             <li data-aos="fade-up" data-aos-duration="700"><a href="mailto:Info@docvitta.ru" data-aos="fade-up"
                                     data-aos-duration="700">Info@docvitta.ru</a></li>
                         </ul>
-                        <a class="contact-btn" href="#" data-aos="fade-up" data-aos-duration="700">Написать<i
+                        <a class="contact-btn" href="mailto:Info@docvitta.ru" data-aos="fade-up" data-aos-duration="700">Написать<i
                                 class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
@@ -71,7 +72,7 @@
                             <li data-aos="fade-up" data-aos-duration="700"><a href="tel:+74953632277">+7 495 363 22 77</a></li>
                             <li data-aos="fade-up" data-aos-duration="700"><a href="tel:+79398397496">+7 939 839 74 96</a></li>
                         </ul>
-                        <a class="contact-btn" href="#" data-aos="fade-up" data-aos-duration="700">Позвонить<i
+                        <a class="contact-btn" href="tel:+79398397496" data-aos="fade-up" data-aos-duration="700">Позвонить<i
                                 class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
