--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="banner-details d-flex position-relative">
                         <figure class="mb-0">
-                            <img src="{% static 'assets/images/doctor-img.png' %}" alt="doctor-img">
+                            <img src="{% static 'assets/images/doctor-img4.png' %}" alt="doctor-img">
                         </figure>
 <!--                        <div class="banner-details-txt">-->
 <!--                            <p data-aos="fade-up" data-aos-duration="700">Duis aute irure dolor in reprehenderit in-->
@@ -89,7 +89,7 @@
 <!-- SERVICE SECTION -->
     <section class="w-100 float-left service-con padding-top padding-bottom">
         <div class="container">
-            <h2 class="pb-5">Наши услуги</h2>
+            <h2 class="pb-5">Популярные услуги</h2>
             <div class="service-box">
                 {% for dep in departaments %}
                 <div class="service-box-item" data-aos="fade-up" data-aos-duration="700">
@@ -119,30 +119,31 @@
                             <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img3.jpg' %}"
                                 alt="vedio-img">
                         </div>
-                        <div class="btn-outer">
-                            <a href="javascript:void(0)" onclick="lightbox_open();">
-                                <div class="video-wrap">
-                                    <img src="{% static 'assets/images/play-icon.png' %}" alt="play-icon">
-                                </div>
-                            </a>
-                        </div>
+<!--                        <div class="btn-outer">-->
+<!--                            <a href="javascript:void(0)" onclick="lightbox_open();">-->
+<!--                                <div class="video-wrap">-->
+<!--                                    <img src="{% static 'assets/images/play-icon.png' %}" alt="play-icon">-->
+<!--                                </div>-->
+<!--                            </a>-->
+<!--                        </div>-->
                     </div>
                 </div>
                 <div class="about-box-title" data-aos="fade-up" data-aos-duration="700">
                     <span class="d-block sub-txt">О клинике</span>
-                    <h2>Витта Компани &
-                        ВиттаМед</h2>
-                    <p>Группа компаний "Витта" с 1900 года занимается развитием доступного здравоохранения. В Витта занимаются оптовым розничным аптечным опеспечением, опеспечением государственных больниц и госпиталей медикаментами и расходыми принадлежностями, а также продвижением доступными для населения аптеками "Диалог" и клиниками "ДокторВитта".</p>
+                    <h2>ВиттаМед</h2>
+                    <p>Мы- команда медицинских специалистов, предоставляющих качественную и профессиональную медицинскую помощь нашим пациентам. Мы имеем большой опыт работы в различных областях медицины, таких как педиатрия, ультразвуковая диагностика, терапия, уход за пациентами, гастроэнтерология, диагностика заболеваний и др.</br>
+Наша команда стремится улучшить здоровье и качество жизни каждого пациента, предоставляя индивидуальный и тщательно продуманный подход к диагностике, лечению и профилактике заболеваний. Мы постоянно совершенствуем наши навыки и знания, чтобы быть в курсе последних медицинских технологий и методов лечения.
+                    </p>
                     <div class="generic-list">
                         <ul class="list-unstyled mb-0">
-                            <li>Monthly Checkups</li>
-                            <li>Caring Medical Team</li>
-                            <li>Proactive and Fast Results</li>
+                            <li>Ежемесячные чек-апы</li>
+                            <li>УЗИ диагностика</li>
+                            <li>Анализы</li>
                         </ul>
                         <ul class="list-unstyled mb-0">
-                            <li>Cosmetic Filling</li>
-                            <li>Dental X-Ray</li>
-                            <li>Complete Crown</li>
+                            <li>Семейный врач</li>
+                            <li>Холтер, Смад, ЭКГ</li>
+                            <li>Профилактические массажи</li>
                         </ul>
                     </div>
                     <div class="generic-btn">
