--- a/docvitta/templates/homepage/page.html
+++ b/docvitta/templates/homepage/page.html
@@ -34,7 +34,7 @@
                             {% if page.image.url is not null %}<img src="{{ page.image.url }}" alt="" class="img-fluid">{% endif %}
                         </figure>
                         <div class="content1">
-                            <h4 data-aos="fade-up" data-aos-duration="700"></h4>
+                            <h4 data-aos="fade-up" data-aos-duration="700">{{ page.name }}</h4>
                             <i class="fas fa-user" data-aos="fade-up" data-aos-duration="700"></i>
 
                             <p class="text-size-14" data-aos="fade-up" data-aos-duration="700">{{ page.text|safe }}
