--- a/docvitta/templates/socnetworks.html
+++ b/docvitta/templates/socnetworks.html
@@ -3,21 +3,21 @@
     <h5 data-aos="fade-up" data-aos-duration="700">Подписывайтесь</h5>
     <div class="">
         <ul class="mb-0 list-unstyled " data-aos="fade-up" data-aos-duration="700">
-            <a href="https://vk.com/doctorvitta"
+            <a href="https://vk.com/doctorvitta" target="_blank"
                class=""><img
                     class="fab fa-linkedin-in" src="{% static 'assets/images/vk.png'%}"></a>
             <a
-                    href="https://instagram.com/doctorvitta" class="text-decoration-none"><img
+                    href="https://instagram.com/doctorvitta" target="_blank" class="text-decoration-none"><img
                     class="fab fa-instagram" src="{% static 'assets/images/instagram.png'%}"></a>
-            <a href="https://ok.ru/group/70000004744559"
+            <a href="https://ok.ru/group/70000004744559" target="_blank"
                class="text-decoration-none"><img
                     class="fab fa-facebook-f" src="{% static 'assets/images/facebook.png'%}"></a>
             <a
-                    href="https://dzen.ru/doctorvitta"
+                    href="https://dzen.ru/doctorvitta" target="_blank"
                     class="text-decoration-none"><img class="fab fa-twitter"
                                                       src="{% static 'assets/images/bookmark_1.png'%}"></a>
             <a
-                    href="https://t.me/docvitta"
+                    href="https://t.me/docvitta" target="_blank"
                     class="text-decoration-none"><img class="fab fa-twitter"
                                                       src="{% static 'assets/images/telegram.png'%}"></a>
         </ul>
